Add border to the form

--- a/register.html
+++ b/register.html
@@ -55,7 +55,7 @@
     <div class=" container hero ">
         <div class="row">
             <div class="col-md-4"></div>
-            <div class="col-md-4">
+            <div class="col-md-4 border border-1">
                 <div class="my-forms">
                     <img 
                     src="images/register.svg" 
